# klusolve

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  HOWTOBUILD.MD  README.md  appveyor.yml
.github/workflows/: builds.yml
ci/: build_appveyor.bat  build_linux_x64.sh  build_linux_x86.sh  build_unix.sh  build_win.bat  download_deps.sh  pack.sh  pack_travis.sh
include/: KLUSolve.h  KLUSolveX.h  KLUSystemX.h
src/: KLUSolveX.cpp  KLUSystemX.cpp  extra.cpp  klusolve.def  klusolve.map  klusolve_metis.c  klusolvex.def  klusolvex.map  metis.patch  metis_no_exe.patch  mvmult.cpp
